Tweak remote UI

--- a/client/index.html
+++ b/client/index.html
@@ -150,8 +150,8 @@
                 v-touch:swipe.top="make_touch_handler('edit_copy')"
                 v-touch:swipe.left="make_touch_handler('file_save')">
                 <div class="label origin">edit_undo<br>edit_redo</div>
-                <div class="label east"><div class="rotate">edit_paste</div></div>
-                <div class="label west"><div class="rotate-alt">file_save</div></div>
+                <div class="label east rotate">edit_paste</div>
+                <div class="label west rotate-alt">file_save</div>
                 <div class="label south"><div>mirror_canvas</div></div>
                 <div class="label north"><div>edit_copy</div></div>
             </div>
