--- a/client/index.html
+++ b/client/index.html
@@ -146,9 +146,14 @@
                 v-touch:multitap="make_touch_handler('edit_redo')"
                 v-touch:tap="make_touch_handler('edit_undo')"
                 v-touch:swipe.right="make_touch_handler('edit_paste')"
+                v-touch:flick.right="make_touch_handler('paste_into')"
                 v-touch:swipe.bottom="make_touch_handler('mirror_canvas')"
+                v-touch:flick.bottom="make_touch_handler('reset_zoom')"
                 v-touch:swipe.top="make_touch_handler('edit_copy')"
-                v-touch:swipe.left="make_touch_handler('file_save')">
+                v-touch:flick.top="make_touch_handler('edit_cut')"
+                v-touch:swipe.left="make_touch_handler('file_save')"
+                v-touch:flick.left="make_touch_handler('file_save_as')"
+                >
                 <div class="label origin">edit_undo<br>edit_redo</div>
                 <div class="label east rotate">edit_paste</div>
                 <div class="label west rotate-alt">file_save</div>
